src/test/deca/context/invalid/test_error_3.53-5.deca
// Description:
//    Soulève l'erreur (3.53)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : 'boolean' et 'string' ne sont pas compatibles avec l'opérateur binaire '+' (règle 3.53)
//
// Historique:
//      cree le 06/01/2022

{
	int var;
    var = true + "hello";
}
